Wanking on the documentation- builds the pdf

--- a/javautil-7/javautil-joblog/README.html
+++ b/javautil-7/javautil-joblog/README.html
@@ -6,6 +6,7 @@
 <p>Thus a few judicious additions to an Oracle Form or a batch job can provide the foundation of information necessary to establish where database resources are being consumed.</p>
 <p>Resolution of these matters is a different matter and may involve gathering statistics, altering execution plans, creating or eliminating indexes or rewriting SQL.</p>
 <p>SGA parameters may have to be changed.</p>
+<p>https://asktom.oracle.com/Misc/instrumentation.html # TODO</p>
 <h2 id="document-organization">Document Organization</h2>
 <p>We will introduce the types of logging, show examples of how to instrument your code and what type of output is generated.</p>
 <p>Then we will guide you through the installation and options.</p>
